--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -207,12 +207,12 @@
 <div class="col-md-15 container">
     <div class="col-md-6" style="background-color: white;">
         <% Organization.all.each do |org|%>
-            <% if org.id == @org_id%>
-                <% btn_style = "btn btn-lg btn-success" %>
-            <% else %>
-                <% btn_style = "btn btn-lg btn-default" %>
-            <% end %>
-            <%= link_to org.name, org_filter_books_path(org_filter: org.id), :class => btn_style %>
+        <% if org.id == @org_id%>
+        <% btn_style = "btn btn-lg btn-success" %>
+        <% else %>
+        <% btn_style = "btn btn-lg btn-default" %>
+        <% end %>
+        <%= link_to org.name, org_filter_books_path(org_filter: org.id), :class => btn_style %>
         <% end %>
     </div>
 </div>
@@ -231,67 +231,55 @@
 <br>
 
 
-<div class="row">
-    <% @books.each do |book| %>
-    <div class="card-container col-sm-6 col-md-4 col-lg-4 mt-4">
-        <div class="card">
-            <% if book.picture_url.blank?%>
-            <img class="card-img-top" src="https://picsum.photos/200/150/?random">
-            <%else%>
-            <img src="<%=book.picture_url%>" alt="" class="card-img-top">
-            <%end%>
+<div class="row" id="books_list">
+    <%= render partial: "book", collection: @books %>
+</div>
 
-            <div class="card-block">
-                <figure class="profile">
-                    <% if book.users.size > 0%>
-                    <% book.users.each do |user|%>
-                    <img src="<%=user.img_url%>" alt="" class="profile-avatar">
-                    <%end%>
-                    <%else%>
 
-                    <%end%>
 
-                </figure>
-                <h4 class="card-title mt-3">
-                    <%= link_to book_path(book.id) do %>
-                    <%= book.title %>
-                    <%end%>
-                </h4>
-                <div class="meta">
-                    所屬單位：<%= book.organization.name%>
-                </div>
-                <div class="meta">
-                    借閱次數：<%= book.issue_count%>
-                </div>
-                <div class="card-text">
-                    剩餘：<%=book.no_copies%> 本
-                </div>
-            </div>
-            <div class="card-footer">
-                <small>
-                    <% if book.comments.average(:score).present?%>
-                    <span style="color: orange;">
-                        <% book.comments.average(:score).to_i.times do%>
-                        &#9733;
-                        <%end%>
-                    </span>
-                    <%end%>
-                </small>
-                <br>
-                <i class="fa fa-tags">
-                    <% book.tag_list.each do |tag| %>
-                    <%= link_to tagged_books_path(tag: tag), :class=>"btn btn-default btn-sm" do%>
-                    <%=tag%>
-                    <%end%>
-                    <% end %>
-                </i>
-            </div>
-        </div>
-    </div>
-    <%end%>
+<div class="paginate">
+    <%= paginate @books %>
 </div>
 
 
 <script>
     $(".carousel-inner .item").first().addClass("active");
+
+
+    // $('#books_list').append('<%= j render(@books) %>'); <
+    // %
+    // if @books.next_page % >
+    //     $('.pagination').replaceWith('<%= j paginate(@books) %>'); <
+    // %
+    // else % >
+    //     $('.pagination').remove(); <
+    // % end % >
+    //     <
+    //     % sleep 1 % >
+
+
+    // is_last_page = false
+    // on_loading = false
+    // window.onscroll = function(ev) {
+    //     is_to_button = (window.innerHeight + window.scrollY) >= document.body.offsetHeight
+    //     url = $('.pagination [rel="next"]').attr('href')
+    //     console.log(is_last_page)
+    //     console.log(is_to_button)
+    //     console.log(url)
+
+
+    //     if (!url) {
+    //         is_last_page = true
+    //     }
+
+    //     if (is_to_button && !is_last_page) {
+    //         $.getScript(url)
+    //     } else if (is_to_button && is_last_page) {
+    //         $('.pagination').text("到底了")
+    //     }
+
+    //     <
+    //     % sleep 3 % >
+
+    // };
 </script>
